objects/Individual_Email_Results__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Name__c</fullName>
        <label>Email Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opened</label>
        <type>Checkbox</type>
    </fields>
    <label>Individual Email Results</label>
    <listViews>
        <fullName>Best_View</fullName>
        <columns>NAME</columns>
        <columns>Date_Sent__c</columns>
        <columns>Email_Name__c</columns>
        <columns>Opened__c</columns>
        <columns>Clicked__c</columns>
        <columns>Bounced__c</columns>
        <filterScope>Everything</filterScope>
        <label>Best View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>